--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>TORRfeed</title>
+    <title>TorrFeed</title>
     <base href="/" />
     <!-- build:css -->
     <link rel="stylesheet" href="./build/app.css">
