Variables and shared styles moved to own files under shared/, style up splashscreen

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,17 @@
     <!-- endbuild -->
   </head>
   <body>
-    <app>Loading...</app>
+    <app>
+        <div class="splash-screen">
+            <div class="main-title">
+                <span class="title-emphasis">Torr</span><span>Feed</span>
+            </div>
+            <div class="spinner">
+                <div class="double-bounce1"></div>
+                <div class="double-bounce2"></div>
+            </div>
+        </div>
+    </app>
     <!-- build:js -->
     <script src="./node_modules/systemjs/dist/system.js"></script>
     <script src="./systemjs.config.js"></script>
